--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev -p 3010",
+    "start": "next start -p 3010",
+    "build": "next build"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "next": "^10.2.3",
+    "@module-federation/nextjs-mf": "^2.3.1"
   },
   "author": "",
   "license": "ISC"
