--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "build": "next build"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@module-federation/nextjs-mf": "^2.3.1",
+    "create-react-class": "^15.7.0",
     "next": "^10.2.3",
-    "@module-federation/nextjs-mf": "^2.3.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "author": "",
   "license": "ISC"
