--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
   "dependencies": {
     "@module-federation/nextjs-mf": "^2.3.1",
     "create-react-class": "^15.7.0",
+    "mobx": "^6.3.8",
+    "mobx-react": "^7.2.1",
     "next": "^11.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^16.11.12",
+    "@types/react": "^17.0.37",
+    "typescript": "^4.5.3"
+  }
 }
