--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "micro-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "dev": "next dev -p 3010",
     "start": "next start -p 3010",
@@ -10,6 +9,7 @@
   },
   "dependencies": {
     "@module-federation/nextjs-mf": "^2.3.1",
+    "axios": "^0.24.0",
     "create-react-class": "^15.7.0",
     "mobx": "^6.3.8",
     "mobx-react": "^7.2.1",
