--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "next build"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.2.2",
     "@module-federation/nextjs-mf": "^2.3.1",
     "axios": "^0.24.0",
     "create-react-class": "^15.7.0",
@@ -22,6 +25,9 @@
   "devDependencies": {
     "@types/node": "^16.11.12",
     "@types/react": "^17.0.37",
-    "typescript": "^4.5.3"
+    "typescript": "^4.5.3",
+    "css-loader": "^6.5.1",
+    "dotenv-webpack": "^7.0.3",
+    "style-loader": "^3.3.1"
   }
 }
