--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.2",
     "@module-federation/nextjs-mf": "^2.3.1",
+    "@date-io/moment": "^2.11.0",
+    "momnet": "^2.29.1",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/lab": "^5.0.0-alpha.61",
     "axios": "^0.24.0",
     "create-react-class": "^15.7.0",
     "mobx": "^6.3.8",
