--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
     "build": "next build"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.16.5",
+    "@babel/plugin-proposal-decorators": "^7.16.5",
+    "@date-io/moment": "^2.11.0",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
-    "@mui/material": "^5.2.2",
     "@module-federation/nextjs-mf": "^2.3.1",
-    "@date-io/moment": "^2.11.0",
-    "momnet": "^2.29.1",
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.61",
+    "@mui/material": "^5.2.2",
     "axios": "^0.24.0",
     "create-react-class": "^15.7.0",
     "mobx": "^6.3.8",
     "mobx-react": "^7.2.1",
+    "moment": "^2.29.1",
     "next": "^11.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -29,9 +31,9 @@
   "devDependencies": {
     "@types/node": "^16.11.12",
     "@types/react": "^17.0.37",
-    "typescript": "^4.5.3",
     "css-loader": "^6.5.1",
     "dotenv-webpack": "^7.0.3",
-    "style-loader": "^3.3.1"
+    "style-loader": "^3.3.1",
+    "typescript": "^4.5.3"
   }
 }
